# fastq-dl

./: .dockerignore  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  citation.cff  codecov.yml  environment.yml  fastq-dl.py  justfile  llms.txt  paper.bib  paper.md  poetry.toml  pyproject.toml  requirements.txt
.claude/skills/update-catalog/: SKILL.md
.claude/skills/update-catalog/scripts/: update_catalog.py
.github/: FUNDING.yml
.github/workflows/: fastq-dl.yml  release.yml
fastq_dl/: __init__.py  constants.py  download.py  exceptions.py  fastq_dl.py  utils.py
fastq_dl/cli/: download.py
fastq_dl/providers/: ena.py  generic.py  sra.py
tests/: conftest.py  test_cli.py  test_download.py  test_integration.py  test_providers_ena.py  test_providers_generic.py  test_providers_sra.py  test_utils.py
